--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"@nuxt/typescript-build": "^2.1.0",
 		"@nuxtjs/ionic": "latest",
 		"nuxi": "^3.0.0",
-		"nuxt": "^3.0.0"
+		"nuxt": "^3.0.0",
+		"prisma": "^4.9.0"
 	},
 	"dependencies": {
 		"@capacitor/android": "4.6.1",
@@ -31,6 +32,7 @@
 		"@capacitor/status-bar": "4.1.1",
 		"@capacitor/storage": "^1.2.5",
 		"@ionic/vue": "^6.4.2",
+		"@prisma/client": "4.9.0",
 		"nuxt-proxy": "^0.3.12",
 		"pug": "^3.0.2",
 		"sass": "^1.57.1",
