--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
 		"@capacitor/storage": "^1.2.5",
 		"@ionic/vue": "^6.4.2",
 		"@prisma/client": "4.9.0",
+		"@types/bcrypt": "^5.0.0",
+		"@types/jsonwebtoken": "^9.0.1",
+		"bcrypt": "^5.1.0",
+		"jsonwebtoken": "^9.0.0",
 		"nuxt-proxy": "^0.3.12",
 		"pug": "^3.0.2",
 		"sass": "^1.57.1",
