--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@nuxt/types": "^2.15.8",
 		"@nuxt/typescript-build": "^2.1.0",
 		"@nuxtjs/ionic": "latest",
+		"@types/bcryptjs": "^2.4.2",
 		"nuxi": "^3.0.0",
 		"nuxt": "^3.0.0",
 		"prisma": "^4.9.0"
@@ -33,9 +34,8 @@
 		"@capacitor/storage": "^1.2.5",
 		"@ionic/vue": "^6.4.2",
 		"@prisma/client": "4.9.0",
-		"@types/bcrypt": "^5.0.0",
 		"@types/jsonwebtoken": "^9.0.1",
-		"bcrypt": "^5.1.0",
+		"bcryptjs": "^2.4.3",
 		"jsonwebtoken": "^9.0.0",
 		"nuxt-proxy": "^0.3.12",
 		"pug": "^3.0.2",
