--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@nuxt/typescript-build": "^2.1.0",
 		"@nuxtjs/ionic": "latest",
 		"@types/bcryptjs": "^2.4.2",
+		"@vue/compiler-sfc": "^3.2.47",
 		"nuxi": "^3.0.0",
 		"nuxt": "^3.0.0",
 		"prisma": "^4.9.0"
