--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "compileroptions": {
-    "nounusedlocals": false
+    "nounusedlocals": false,
+    "types": ["vue/ref-macros"]
   }
 }
